made prepared statements a bit more efficient in MySqlgroup and mysqlevent found weird bug with edit group in the maintenance page, but could not replicate

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/EditGroup.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/EditGroup.cshtml
@@ -49,7 +49,7 @@
             <td>
                 <fieldset>
                     <legend>@Html.LabelFor(model => model.canCreate)</legend>
-                    @Html.ListEditorFor(m => m.canCreate, "Can Edit", "Group Members")
+                    @Html.ListEditorFor(m => m.canCreate, "Can create and edit events", "Group Members")
                 </fieldset>
             </td>
         </tr>
