--- a/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
@@ -1,108 +1,114 @@
 ﻿@model CalendarApplication.Models.Calendar.CalendarDay
 
-@using CalendarApplication.Models.Event;
+@{
+    ViewBag.Title = "Day";
+}
+
+@using CalendarApplication.Models.Calendar;
 @using CalendarApplication.Models.User;
+@using CalendarApplication.Models.Event;
 @using CalendarApplication.Models.Maintenance;
 
-<table style="font-size:20px;width:850px">
-    <tr>
-        <td colspan="3" style="text-align:center">
-            @Html.ActionLink("Today", "Index", "Calendar",
-                             new { mode = 1, year = DateTime.Now.Year, month = DateTime.Now.Month, day = DateTime.Now.Day,
-                                    range = 0},null)
-        </td>
-    </tr>
-    <tr>
-        <td style="text-align:left;padding:0;width:20%">
-            @{DateTime date = Model.Date.AddDays(-1);}
-            @Html.ActionLink(date.ToString("<- d. MMM"), "Index", "Calendar",
-                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day, range = 0},null)
-        </td>
-        <td style="text-align:center;padding:0;width:60%">
-            @Model.Date.ToString("d. ")
-            @Html.ActionLink(Model.Date.ToString("MMM"), "Index", "Calendar",
-                             new { mode = 0, year = Model.Date.Year, month = Model.Date.Month, day = 0,
-                                    range = 0},null)
-            @Model.Date.ToString(" yyy")
-        </td>
-        <td style="text-align:right;padding:0;width:20%">
-            @{date = Model.Date.AddDays(1);}
-            @Html.ActionLink(date.ToString("d. MMM ->"), "Index", "Calendar",
-                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day,
-                                    range = 0},null)
-        </td>
-    </tr>
-</table>
+<script src="@Url.Content("~/Scripts/calendar-script.js")" type="text/javascript"></script>
+<link href="@Url.Content("~/Content/Calendar.css")" rel="stylesheet" type="text/css" />
 
-<table border="1" style="padding:0;border-spacing:0;width:850px">
+<h3 style="color:red">@TempData["errorMsg"]</h3>
 
-    <tr>
-        <td style="width:50px"></td>
-        <td style="padding:0">
-            <table style="border-collapse:collapse;width:100%;padding:0">
-                <tr>
-                    @{
-                        int offset = Config.GetStartingHourOfDay();
-                        for (int i = offset; i < 24+offset; i+=2)
-                        {
-                            <td style="width:@(100/12)%;border-left:solid;padding:0">@(i % 24)</td>
-                        }
-                    }
-                </tr>
-            </table>
-        </td>
-    </tr>
+<form id="cal_form" method="post">
+    @Html.HiddenFor(model => model.Date)
+    @Html.HiddenFor(model => model.Mode)
 
-    @foreach (Room room in Model.Rooms)
-    {
+    <table>
         <tr>
-            <td style="width:50px">
-                @room.Name
-            </td>
-            <td style="padding:0;border-spacing:0">
-                <table style="border-collapse:collapse;width:100%"><tr style="border-spacing:0">
-                    @{
-                        int curEnd = 0;
-                        foreach (BasicEvent e in Model.Events)
+            <td>
+                <table style="font-size:20px;padding:0;border-spacing:0;width:700px">
+                    <tr style="padding:0">
+                        <td colspan="3" style="text-align:center;padding:0">
+                            <input type="button" value="Today" onclick="goto('@(DateTime.Today.ToString("yyyy-MM-dd"))')" />
+                        </td>
+                    </tr>
+                    <tr style="padding:0">
+                        <td style="text-align:left;padding:0;width:15%">
+                            <input type="button" value="@(Model.Date.AddDays(-1).ToString("<- d. MMM"))"
+                                onclick="goto('@(Model.Date.AddDays(-1).ToString("yyyy-MM-dd"))')" />
+                        </td>
+                        <td style="padding:0;text-align:center;">
+                            @(Model.Date.ToString("d. MMM yyyy"))
+                        </td>
+                        <td style="text-align:right;padding:0;width:15%">
+                            <input type="button" value="@(Model.Date.AddDays(1).ToString("d. MMM ->"))"
+                                onclick="goto('@(Model.Date.AddDays(1).ToString("yyyy-MM-dd"))')" />
+                        </td>
+                    </tr>
+                </table>
+
+                <style>
+                    table.day-view {
+                        border: 1px solid black;
+                        border-collapse:collapse
+                    }
+                    table.day-view tr {
+                        border: 1px solid black;
+                        padding:0;
+                    }
+                    table.day-view td {
+                        border: 1px solid black;
+                        padding:0;
+                        height:14px;
+                    }
+                </style>
+
+                <table class="day-view">
+                    <tr>
+                        <td></td>
+                        @foreach (Room r in Model.Rooms)
                         {
-                            if (e.Rooms != null && e.Rooms.Contains(room))
+                            <td style="width:100px">
+                                @r.Name
+                            </td>
+                        }
+                    </tr>
+                    <tr>
+                        @{
+                            DateTime offset = Model.Date;
+                            <td style="height:28px" rowspan="2">@offset.ToString("HH:mm")</td>
+                            foreach (Room r in Model.Rooms)
                             {
-                                int start = (e.Start < Model.Date ? 0 : ((((24+e.Start.Hour-offset) % 24) * 60 + e.Start.Minute)*100) / 1440);
-                                int end = (e.End > Model.Date.AddDays(1) ? 100 : ((((24+e.End.Hour-offset) % 24) * 60 + e.End.Minute)*100) / 1440);
-                    
-                    
-                    
-                                <td style="width:@(start-curEnd)%;height:100%;padding:0"></td>
-                                <td style="width:@(end-start)%;max-width:@(end-start)%;
-                                    background-color:@(e.getColor());word-wrap:break-word;overflow:hidden">
-                                    @if(e.ViewVisible)
+                                <td style="position:relative;z-index:2;">
+                                    @foreach (BasicEvent e in Model.Events)
                                     {
-                                        @Html.ActionLink((e.Name.Length > 10 ? e.Name.Substring(0,8)+"..." : e.Name), "Index", "Event", new { id = e.ID }, null)
-                                    }
-                                    else
-                                    {
-                                        @:Event not visible
+                                        if (e.Rooms.Contains(r))
+                                        {
+                                            int start = e.Start < offset ? 0 : ((e.Start.Hour - offset.Hour) * 60 + e.Start.Minute) / 2;
+                                            int dist = e.End > offset.AddDays(1) ? 720 - start
+                                                : ((e.End.Hour - offset.Hour) * 60 + e.End.Minute) / 2 - start;
+                                            
+                                            <div style="position:absolute;z-index:1;top:@(start)px;left:4px;width:92px;height:@(dist)px;
+                                                        background-color:@(e.getColor());">
+                                                @e.Name
+                                            </div>
+                                        }
                                     }
                                 </td>
-                    
-                                curEnd = end;
                             }
                         }
+                    </tr>
+                    @for (int hour = 0; hour < 47; hour++)
+                    {
+                        <tr>
+                            @if (hour % 2 != 0)
+                            {
+                                offset = offset.AddHours(1);
+                                <td style="height:28px" rowspan="2">@offset.ToString("HH:mm")</td>
+                            }
+                            @for (int i = 0; i < Model.Rooms.Count; i++) { <td></td> }
+                        </tr>
                     }
-                    <td style="width:@(100-curEnd)%;height:100%;padding:0"></td>
-                </tr></table>
+                </table>
+            </td>
+            <td>
+                @Html.Partial("_FilterPartial", Model)
             </td>
         </tr>
-    }
-</table>
-
-<br />
-
-@if(UserModel.GetCurrentUserID() != -1 && DateTime.Today <= Model.Date) {
-    <text>
-        Would you like to
-        @Html.ActionLink("create a new event on this day", "EditEvent", "Event",
-                            new { id = -1, year = Model.Date.Year, month = Model.Date.Month, day = Model.Date.Day }, null)
-        ?
-    </text>
-}
+    </table>
+</form>
