--- a/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
@@ -5,58 +5,82 @@
 }
 
 @using CalendarApplication.Models.Event;
+@using CalendarApplication.Models.Calendar;
 
-<form id="list_form">
+<script src="@Url.Content("~/Scripts/calendar-script.js")" type="text/javascript"></script>
+<link href="@Url.Content("~/Content/Calendar.css")" rel="stylesheet" type="text/css" />
+
+<h3 style="color:red">@TempData["errorMsg"]</h3>
+
+<form id="list_form" method="post">
+    @Html.HiddenFor(model => model.EventFrom)
+    @Html.HiddenFor(model => model.OldLimit)
     <table>
         <tr>
             <td>
                 <fieldset id="search">
-        <legend>Search</legend>
+                    <legend>Search</legend>
 
-        <table id="dates">
-            <tr>
-                <td id="from">
+                    <table id="dates">
+                        <tr>
+                            <td id="from">
+                                From date: <br />
+                                @Html.DateTimeEditorFor(model => model.Start)
+                            </td>
+                            <td id="all">
+                                Show all events:
+                                @Html.CheckBoxFor(model => model.All)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="to">
+                                To Date: <br />
+                                @Html.DateTimeEditorFor(model => model.End)
+                            </td>
+                        </tr>
+                    </table>
 
-                </td>
-                <td id="all">
-
-                </td>
-            </tr>
-            <tr>
-                <td id="to">
-
-                </td>
-            </tr>
-        </table>
-
-        <table id="limit">
-            <tr>
-                <td>Results pr. page:</td>
-            </tr>
-        </table>
+                    <table id="limit">
+                        <tr>
+                            <td>Results pr. page: 
+                                <select name="Limit">
+                                    @foreach (int limit in CalendarList.LIMITS)
+                                    {
+                                    <option value="@limit">@limit</option>
+                                    }
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
     
-        <input type="submit" value="Search" />
-    </fieldset>
+                    <input type="submit" value="Search" />
+                </fieldset>
             </td>
-            <td rowspan="2">
-                @Html.Partial("_FilterPartial", Model);
+            <td>
+                @Html.Partial("_FilterPartial", Model)
             </td>
         </tr>
         <tr>
-            <td>
-                <table id="navi-high" border="1">
+            <td colspan="2">
+                <h3>Showing events @(Model.EventFrom+1)-@(Model.EventFrom+Model.Limit > Model.TotalEventCount ?
+                                                            Model.TotalEventCount : Model.EventFrom+Model.Limit)
+                    out of a total of @Model.TotalEventCount!</h3>
+                <table class="navigator" id="navi-high">
                     <tr>
-                        <td><-</td>
-                        <td>1</td>
-                        @for (int i = 0; i < Model.Events.Count / Model.Limit; i++)
+                        <td onclick="gotoOther(@(Model.EventFrom-Model.Limit < 0 ? 0 : Model.EventFrom-Model.Limit))"><-</td>
+                        @for (int i = 0; Model.TotalEventCount > 0 && i <= (Model.TotalEventCount-1) / Model.Limit; i++)
                         {
-                            <td>@(i+2)</td>
+                            int gotoVal = i * Model.Limit;
+                            if(gotoVal != Model.EventFrom) { <td  onclick="gotoOther(@(gotoVal))">@(i+1)</td> }
+                            else { <td class="selected">@(i+1)</td> }
                         }
-                        <td>-></td>
+                        <td onclick="gotoOther(@(Model.EventFrom+Model.Limit > Model.TotalEventCount
+                                                    ? Model.TotalEventCount
+                                                    : Model.EventFrom+Model.Limit))">-></td>
                     </tr>
                 </table>
-
-                <table id ="list">
+                <br />
+                <table class="event-list" id ="list">
                     <tr>
                         <th>Event name</th>
                         <th>Type</th>
@@ -76,18 +100,6 @@
                             <td style="background-color:@e.getColor()">@e.getStateText()</td>
                         </tr>
                     }
-                </table>
-
-                <table id="navi-low" border="1">
-                    <tr>
-                        <td><-</td>
-                        <td>1</td>
-                        @for (int i = 0; i < Model.Events.Count / Model.Limit; i++)
-                        {
-                            <td>@(i+2)</td>
-                        }
-                        <td>-></td>
-                    </tr>
                 </table>
             </td>
         </tr>
